--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ Global Styles
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  margin-top: 25px;
   font-family: 'Ubuntu', sans-serif;
   display: flex;
   flex-direction: column;
@@ -47,7 +48,7 @@ Global Styles
 
 .title {
   position: relative;
-  width: 70%;
+  width: 85%;
   text-align: center;
   padding: 15px;
   border-radius: 15px;
@@ -65,10 +66,11 @@ Global Styles
 }
 
 .color-form {
-  padding: 25px;
+  padding: 15px;
   margin: 15px 0;
   border: 2px solid var(--border-color);
   border-radius: 15px;
+  text-align: center;
 }
 
 .color-form input, button {
@@ -78,7 +80,7 @@ Global Styles
 }
 
 .btn {
-  margin-left: 5px;
+  margin-left: 2px;
   padding: 5px 8px;
   background-color: var(--main-color);
   border-color: var(--main-color);
@@ -97,8 +99,8 @@ Global Styles
 }
 
 .color-item {
-  width: 105px;
-  height: 60px;
+  width: 100px;
+  height: 55px;
   padding: 5px;
   text-align: center;
   font-size: 14px;
@@ -118,12 +120,35 @@ Global Styles
   text-transform: uppercase;
 }
 
-@media screen and (min-width: 850px) {
+/* Pantallas smartphones pequeñas */
 
-  .color-container {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
+@media screen and (max-width: 320px) {
+
+  .title {
+    width: 95%;
   }
+
+  .logo {
+    width: 20px;
+  }
+
+  .color-form {
+    padding: 15px 10px;
+  }
+
+  .color-item {
+      height: 50px;
+  }
+
+  .color-item p {
+    font-size: 12px;
+  }
+
+}
+
+/* Pantallas tablets regulares */
+
+@media screen and (min-width: 768px) {
 
   .title {
     width: 60%;
@@ -147,6 +172,22 @@ Global Styles
       padding: 5px 10px;
       font-size: 15px;
       font-weight: bold;
+  }
+
+  .color-item {
+      width: 150px;
+      height: 100px;
+  }
+
+}
+
+/* Pantallas laptops */
+
+@media screen and (min-width: 850px) {
+
+  .color-container {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
   }
 
   .color-item {
